@@ -1486,7 +1486,7 @@ void Worksheet::OnMouseRightDown(wxMouseEvent &event)
           if (CanDeleteSelection())
             popupMenu->Append(popid_delete, _("Delete Selection"), wxEmptyString, wxITEM_NORMAL);
         }
-        if(IsSelected(MC_TYPE_LABEL))
+        if(IsSelected(MC_TYPE_LABEL) || IsSelected(MC_TYPE_PROMPT))
         {
           if(popupMenu->GetMenuItemCount()>0)
             popupMenu->AppendSeparator();
@@ -1512,6 +1512,22 @@ void Worksheet::OnMouseRightDown(wxMouseEvent &event)
           popupMenu->Append(popid_plot2d, _("Plot 2d..."), wxEmptyString, wxITEM_NORMAL);
           popupMenu->Append(popid_plot3d, _("Plot 3d..."), wxEmptyString, wxITEM_NORMAL);
         }
+      }
+      if (IsSelected(MC_TYPE_LABEL))
+      {
+        popupMenu->AppendSeparator();
+        popupMenu->AppendRadioItem(popid_labels_user, _("Prefer user labels"));
+        popupMenu->AppendRadioItem(popid_labels_autogenerated, _("Automatic labels"));
+        popupMenu->AppendRadioItem(popid_labels_useronly, _("User labels only"));
+        popupMenu->AppendRadioItem(popid_labels_disable, _("Don't show labels"));
+        popupMenu->Check(popid_labels_autogenerated,
+                         m_configuration->GetLabelChoice() == Configuration::labels_automatic);
+        popupMenu->Check(popid_labels_user,
+                         m_configuration->GetLabelChoice() == Configuration::labels_prefer_user);
+        popupMenu->Check(popid_labels_useronly,
+                         m_configuration->GetLabelChoice() == Configuration::labels_useronly);
+        popupMenu->Check(popid_labels_disable,
+                         m_configuration->GetLabelChoice() == Configuration::labels_none);
       }
     }
 
