@@ -841,10 +841,14 @@ public:
     popid_edit,
     popid_add_comment,
     popid_insert_input,
-	popid_copy_matlab,
+    popid_copy_matlab,
     popid_copy_tex,
     popid_copy_text,
     popid_copy_mathml,
+    popid_labels_disable,
+    popid_labels_user,
+    popid_labels_useronly,
+    popid_labels_autogenerated,
     popid_image,
     popid_svg,
     popid_emf,
