@@ -4604,6 +4604,34 @@ void wxMaxima::EditMenu(wxCommandEvent &event)
 
   switch (event.GetId())
   {
+  case Worksheet::popid_labels_autogenerated:
+  {
+    m_worksheet->m_configuration->SetLabelChoice(Configuration::labels_automatic);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_labels_user:
+  {
+    m_worksheet->m_configuration->SetLabelChoice(Configuration::labels_prefer_user);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_labels_useronly:
+  {
+    m_worksheet->m_configuration->SetLabelChoice(Configuration::labels_useronly);
+    m_worksheet->RecalculateForce();
+    m_worksheet->RequestRedraw();
+    break;
+  }
+  case Worksheet::popid_labels_disable:
+  {
+    m_worksheet->m_configuration->SetLabelChoice(Configuration::labels_none);
+    m_worksheet->RequestRedraw();
+    break;
+  }
+
   case Worksheet::popid_popup_gnuplot:
   {
     if(m_worksheet->m_cellPointers.m_selectionStart == NULL)
@@ -8949,6 +8977,10 @@ BEGIN_EVENT_TABLE(wxMaxima, wxFrame)
                 EVT_MENU(menu_zoom_150, wxMaxima::EditMenu)
                 EVT_MENU(menu_zoom_200, wxMaxima::EditMenu)
                 EVT_MENU(menu_zoom_300, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_labels_autogenerated, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_labels_user, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_labels_useronly, wxMaxima::EditMenu)
+                EVT_MENU(Worksheet::popid_labels_disable, wxMaxima::EditMenu)
                 EVT_MENU(menu_math_as_1D_ASCII, wxMaxima::EditMenu)
                 EVT_MENU(menu_math_as_2D_ASCII, wxMaxima::EditMenu)
                 EVT_MENU(menu_math_as_graphics, wxMaxima::EditMenu)
