@@ -5,7 +5,8 @@ Current:
   * Better detection of the right place to open autocomplete popups in
   * Better formatting of special unicode operators
   * If autosave on closing fails: Allow the user to ask to exit anyway.
-  * Enable Autosave even if the option to keep the file saved is disabled.
+  * Enable Autosave even if the option to keep the file saved is disabled
+  * A context menu with the "display labels" choices
   * Corrected parametric plots in the plot wizard
 
 19.10.0:
